welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:8: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (baggle <=2 && compteur =5)
                       ^Poucet:8: error: not found: value compteur
	if (baggle <=2 && compteur =5)
                          ^Poucet:10: error: missing arguments for method && in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if (baggle >=3 && compteur =5)
                       ^Poucet:10: error: not found: value compteur
	if (baggle >=3 && compteur =5)
                          ^