welcome.lessons.welcome.loopdowhile.Poucet1.scala.code
var baggle = 0
do{
	
for (compteur <- 1 to 5) // compteur 5 cases
			if (estSurBiscuit())
				baggle=baggle +1
  avance()
	if (baggle <=2 && compteur =5)
		droite()
	if (baggle >=3 && compteur =5)
		gauche()
}	while (!sortieTrouvee())